--- a/assets/scss/_helper.scss
+++ b/assets/scss/_helper.scss
@@ -91,6 +91,27 @@ $body-text: (
 
 //••••••••••••••••••••••••••••••••••••••••
 //
+// - COLOR MAPPING
+//
+//••••••••••••••••••••••••••••••••••••••••
+
+@each $name, $value in $colors {
+    .color--#{$name} {
+        background: $value;
+    }
+}
+
+@function color($key) {
+    @if map-has-key($colors, $key) {
+        @return map-get($colors, $key);
+    }
+
+    @warn "Unknown `#{$key}` in variable $colors.";
+    @return null;
+}
+
+//••••••••••••••••••••••••••••••••••••••••
+//
 // - ROW NO GUTTER
 //
 //••••••••••••••••••••••••••••••••••••••••
@@ -118,7 +139,7 @@ $body-text: (
 
 body {
     font-family: 'Open Sans', sans-serif;
-    background: white;
+    background-color: color(clouds);
     font-size: 16px;
 }
 
@@ -187,26 +208,5 @@ p {
     @include MQ(SM) {
         padding: 20px 0;
     }
-}
-
-//••••••••••••••••••••••••••••••••••••••••
-//
-// - COLOR MAPPING
-//
-//••••••••••••••••••••••••••••••••••••••••
-
-@each $name, $value in $colors {
-    .color--#{$name} {
-        background: $value;
-    }
-}
-
-@function color($key) {
-    @if map-has-key($colors, $key) {
-        @return map-get($colors, $key);
-    }
-
-    @warn "Unknown `#{$key}` in variable $colors.";
-    @return null;
 }
 
